# reaction-atlas

./: .gcloudignore  .gitignore  CITATION.cff  LICENSE  LICENSE.md  NOTICE  README.md  docker-compose.yml  pyproject.toml
conformer_pairs_dataset/: pairs.csv
conformer_pairs_dataset/xyz/: pair_000.xyz  pair_001.xyz  pair_002.xyz  pair_003.xyz  pair_004.xyz  pair_005.xyz  pair_006.xyz  pair_007.xyz  pair_008.xyz  pair_009.xyz  pair_010.xyz  pair_011.xyz  pair_012.xyz  pair_013.xyz  pair_014.xyz  pair_015.xyz  pair_016.xyz  pair_017.xyz  pair_018.xyz  pair_019.xyz  pair_020.xyz  pair_021.xyz  pair_022.xyz  pair_023.xyz  pair_024.xyz  pair_025.xyz  pair_026.xyz  pair_027.xyz  pair_028.xyz  pair_029.xyz  pair_030.xyz  pair_031.xyz  pair_032.xyz  pair_033.xyz  pair_034.xyz  pair_035.xyz  pair_036.xyz  pair_037.xyz  pair_038.xyz  pair_039.xyz  (+60 more)
conformer_pairs_relaxed/: pairs.csv
conformer_pairs_relaxed/xyz/: pair_000.xyz  pair_001.xyz  pair_002.xyz  pair_003.xyz  pair_004.xyz  pair_005.xyz  pair_006.xyz  pair_007.xyz  pair_008.xyz  pair_009.xyz  pair_010.xyz  pair_011.xyz  pair_012.xyz  pair_013.xyz  pair_014.xyz  pair_015.xyz  pair_016.xyz  pair_017.xyz  pair_018.xyz  pair_019.xyz  pair_020.xyz  pair_021.xyz  pair_022.xyz  pair_023.xyz  pair_024.xyz  pair_025.xyz  pair_026.xyz  pair_027.xyz  pair_028.xyz  pair_029.xyz  pair_030.xyz  pair_031.xyz  pair_032.xyz  pair_033.xyz  pair_034.xyz
data/buffer_fragments/: CO2.xyz  H2.xyz  H2CO3.xyz  H3O+.xyz  HCO3-.xyz  OH.xyz
data/fragments/: H.xyz  H2CO.xyz  H2O.xyz
data/reference/: build_maygen_carb.py  enumerate_fixed.csv  grambow_cho_smiles.json  reference_isomers.json  summary_by_formula_java.csv  summary_carb.csv  wiki_wikidata_carb.csv
data/start_xyz/: glycolaldehyde.xyz
demo/exploration/: README.md  plot_discoveries.py  run_demo.sh
demo/kinetics/: README.md  expected_output.txt  run_demo.py
docs/: architecture.md  data.md  reproducing.md  schema.md
investigation/29_wikipedia_compounds/: build_wikipedia_data.py  push_wikipedia_labels.py
neutral_seeds/: pairs.csv
neutral_seeds/xyz/: pair_000.xyz  pair_001.xyz  pair_002.xyz  pair_003.xyz  pair_004.xyz  pair_005.xyz  pair_006.xyz  pair_007.xyz  pair_008.xyz  pair_009.xyz  pair_010.xyz  pair_011.xyz  pair_012.xyz  pair_013.xyz  pair_014.xyz  pair_015.xyz  pair_016.xyz  pair_017.xyz  pair_018.xyz  pair_019.xyz  pair_020.xyz  pair_021.xyz  pair_022.xyz  pair_023.xyz  pair_024.xyz  pair_025.xyz  pair_026.xyz  pair_027.xyz  pair_028.xyz  pair_029.xyz  pair_030.xyz  pair_031.xyz  pair_032.xyz  pair_033.xyz  (+116 more)
report/: .gitignore  exploration_algorithm.tex  merge_si.sh  si1_pes_loop.tex  si2_generative_loop.tex  si3_kinetics.tex  si4_seeds.tex  si6_shared_machinery.tex  si_merged.tex  si_parameters.tex
scripts/: analyze_barriers.py  backfill_ts_ml_invalid.py  build_close_minima_pairs.py  dft_barrier_validation.py  fix_pbe0_audit.py  host_mpi_binds.sh  make_submission_zip.sh  migrate_pickle_to_db.py  profile_hessian_vram.py  smoke_test_ts_correction.py  smoke_ts_correction.slurm  test_preemption.py
tests/: README.md  conftest.py  requirements.txt  test_barrier_integration.py  test_db_smoke.py  test_integration.py  verify_all.py
(+10 files in other folders)
